version/0.28/_sources/api/solver/_autosummary/settings/backflow_species_mass_fraction.rst.txt
:orphan:

.. _backflow_species_mass_fraction:

backflow_species_mass_fraction
==============================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.backflow_species_mass_fraction
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`backflow_species_mass_fraction_child <backflow_species_mass_fraction_child>`


.. rubric:: Included in:

============================   =========================================================

Parent                                                                           Summary

============================   =========================================================
:ref:`species_5 <species_5>`       Allows to change species model variables or settings.

============================   =========================================================

